mobile menu added

--- a/src/components/AdminPanel/AdminPanel.scss
+++ b/src/components/AdminPanel/AdminPanel.scss
@@ -10,17 +10,27 @@
     grid-template-columns: max-content auto;
   }
 
+  @include mobile {
+    grid-template-columns: auto;
+  }
+
   &__sidebar {
-    grid-column: 1;
     max-height: 100vh;
 
     @include mobile {
-      display: none;
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      transform: translateX(-100%);
+      transition: transform 0.3s;
+    }
+
+    &--opened {
+      transform: translateX(0);
     }
   }
 
   &__content {
-    grid-column: 2;
     background-color: #fafbff;
     padding: 0 70px;
     width: 100%;
@@ -34,5 +44,11 @@
     @include tablet {
       padding: 0 15px 20px;
     }
+  }
+
+  &__content-wrapper {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
   }
 }
