--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -4,6 +4,7 @@
   display: flex;
   height: 115px;
   align-items: center;
+  justify-content: space-between;
 
   @include tablet {
     height: 75px;
@@ -13,5 +14,13 @@
     font-weight: 500;
     font-size: 24px;
     line-height: 36px;
+  }
+
+  &__burger {
+    display: none;
+    
+    @include mobile {
+      display: block;
+    }
   }
 }
