--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   &:has(input:focus) {
-    outline: 1px solid #EEEEEE;
+    outline: 1px solid #eeeeee;
   }
 
   &__input {
