--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,2 @@
-@import '../node_modules/scss-reset/src/scss/_reset.scss';
-@import './styles/_utils/fonts';
+@import "../node_modules/scss-reset/src/scss/_reset.scss";
+@import "./styles/_utils/fonts";
