--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -6,7 +6,7 @@
     width: 24px;
     height: 24px;
     background: #f5f5f5;
-    border: 1px solid #EEEEEE;
+    border: 1px solid #eeeeee;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,14 +17,14 @@
     border-radius: 4px;
 
     &--dots {
-        background: none;
-        border: none;
+      background: none;
+      border: none;
     }
 
     &--active {
-        background: #5932EA;
-        border: 1px solid #5932EA;
-        color: #fff;
+      background: #5932ea;
+      border: 1px solid #5932ea;
+      color: #fff;
     }
   }
 }
