--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -12,6 +12,10 @@
     padding: 36px 14px 76px;
   }
 
+  @include mobile {
+    padding: 20px 14px 20px;
+  }
+
   &__topbar {
     display: flex;
     align-items: center;
@@ -28,5 +32,9 @@
   &__nav {
     margin-top: 64px;
     flex-grow: 1;
+
+    @include mobile {
+      margin-top: 20px;
+    }
   }
 }
